k8s/apps/automation/dragonfly/cluster/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redis
spec:
  hostnames:
    - redis.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dragonfly
          namespace: automation
          port: 6379
      matches:
        - path:
            type: PathPrefix
            value: /
